--- a/task_3_skeleton.ipynb
+++ b/task_3_skeleton.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-02-19T08:13:57.455868Z",
@@ -44,9 +44,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "my_iris_data.data.shape: (150, 4)\n",
+      "labels: [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1\n",
+      " 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 2 2 2 2 2 2 2 2 2 2\n",
+      " 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2\n",
+      " 2 2]\n"
+     ]
+    }
+   ],
    "source": [
     "my_iris_data = sklearn.datasets.load_iris()\n",
     "print (\"my_iris_data.data.shape:\",my_iris_data.data.shape)\n",
@@ -55,14 +68,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-02-19T08:13:58.418914Z",
      "start_time": "2018-02-19T08:13:58.410253Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X_train.shape: (120, 5)\n",
+      "y_train.shape: (120,)\n",
+      "X_test.shape: (30, 5)\n",
+      "y_test.shape: (30,)\n"
+     ]
+    }
+   ],
    "source": [
     "X_train = np.concatenate((my_iris_data.data[10:50,:],my_iris_data.data[60:100,:], my_iris_data.data[110:150,:]))\n",
     "X_train = np.concatenate((np.ones((X_train.shape[0],1)),X_train),axis=1) # Append bias term 1\n",
@@ -86,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,6 +156,7 @@
     "$ L({\\bf w}_1, \\dots, {\\bf w}_K, b_1, \\dots, b_K) = -\\sum_{i} \\ln p_{y^{(i)}} + \\frac{\\lambda}{2} \\sum_{k=1}^{K}\\left \\| {\\bf w}_k \\right \\|^2. \\nonumber $\n",
     "\n",
     "where $ p_j = p(y=j|{\\bf x})=\\frac{e^{f_j}}{\\sum_{k=1}^{K}{e^{f_k}}}\\nonumber $; $ f_j =\\mathbf{w}_j \\cdot {\\bf x}+b_j $\n",
+    "\n",
     "The gradient w.r.t $\\textbf{w}$ of the target function:\n",
     "\n",
     "$ \\frac{d L({\\bf w}_1, \\dots, {\\bf w}_K, b_1, \\dots, b_K)}{d \\textbf{w}_k} = \\lambda \\textbf{w}_k + \\sum_{i,y_i=k}(p(k|{\\bf x}_i)-1){\\bf x}_i+\\sum_{i,y_i\\neq k}p(k|{\\bf x}_i){\\bf x}_i.$\n",
@@ -141,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,28 +193,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# gradient of loss function L(w)\n",
     "def L_prime(X, Y, W, b):\n",
     "    ########### YOUR CODE HERE ###########\n",
+    "    N = X.shape[0]\n",
+    "    Y_hat = sigmoid(np.dot(X, W) + b.T) \n",
+    "    error = Y_hat - Y\n",
+    "    \n",
+    "    dL_by_dW = np.dot(X.T, error) / N\n",
+    "    dL_by_db = np.sum(error, axis=0, keepdims=True) / N  \n",
+    "    return dL_by_dW, dL_by_db.T  \n",
     "\n",
-    "\n",
-    "    return dL_by_dW, dL_by_db"
+    "def sigmoid(z):\n",
+    "    return 1 / (1 + np.exp(-z))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "def L(X, Y, W, b):\n",
     "    ########### YOUR CODE HERE ###########\n",
-    "\n",
-    "    return L"
+    "    Z = np.dot(X, W) + b.T  # Broadcasting addition of bias across all samples\n",
+    "    Y_hat = sigmoid(Z)  # Apply sigmoid to get predictions\n",
+    "    loss = -np.mean(Y * np.log(Y_hat) + (1 - Y) * np.log(1 - Y_hat))  # Compute cross-entropy loss\n",
+    "    return loss"
    ]
   },
   {
@@ -201,9 +235,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "shapes (120,5) and (3,5) not aligned: 5 (dim 1) != 3 (dim 0)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[9], line 9\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;66;03m# We will keep track of training loss over iterations\u001b[39;00m\n\u001b[0;32m      8\u001b[0m iterations \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m----> 9\u001b[0m L_list \u001b[38;5;241m=\u001b[39m [\u001b[43mL\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mw\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mb\u001b[49m\u001b[43m)\u001b[49m]\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(n_iter):\n\u001b[0;32m     11\u001b[0m     gradient_w, gradient_b \u001b[38;5;241m=\u001b[39m L_prime(X_train, y_train, w, b)\n",
+      "Cell \u001b[1;32mIn[8], line 3\u001b[0m, in \u001b[0;36mL\u001b[1;34m(X, Y, W, b)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mL\u001b[39m(X, Y, W, b):\n\u001b[0;32m      2\u001b[0m     \u001b[38;5;66;03m########### YOUR CODE HERE ###########\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m     Z \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdot\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mW\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;241m+\u001b[39m b\u001b[38;5;241m.\u001b[39mT  \u001b[38;5;66;03m# Broadcasting addition of bias across all samples\u001b[39;00m\n\u001b[0;32m      4\u001b[0m     Y_hat \u001b[38;5;241m=\u001b[39m sigmoid(Z)  \u001b[38;5;66;03m# Apply sigmoid to get predictions\u001b[39;00m\n\u001b[0;32m      5\u001b[0m     loss \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m-\u001b[39mnp\u001b[38;5;241m.\u001b[39mmean(Y \u001b[38;5;241m*\u001b[39m np\u001b[38;5;241m.\u001b[39mlog(Y_hat) \u001b[38;5;241m+\u001b[39m (\u001b[38;5;241m1\u001b[39m \u001b[38;5;241m-\u001b[39m Y) \u001b[38;5;241m*\u001b[39m np\u001b[38;5;241m.\u001b[39mlog(\u001b[38;5;241m1\u001b[39m \u001b[38;5;241m-\u001b[39m Y_hat))  \u001b[38;5;66;03m# Compute cross-entropy loss\u001b[39;00m\n",
+      "\u001b[1;31mValueError\u001b[0m: shapes (120,5) and (3,5) not aligned: 5 (dim 1) != 3 (dim 0)"
+     ]
+    }
+   ],
    "source": [
     "K = 3\n",
     "\n",
@@ -216,8 +263,8 @@
     "L_list = [L(X_train, y_train, w, b)]\n",
     "for i in range(n_iter):\n",
     "    gradient_w, gradient_b = L_prime(X_train, y_train, w, b)\n",
-    "    w_new = ########### YOUR CODE HERE ###########\n",
-    "    b_new = ########### YOUR CODE HERE ###########\n",
+    "    w_new = w - learning_rate * gradient_w\n",
+    "    b_new = b - learning_rate * gradient_b\n",
     "    iterations.append(i+1)\n",
     "    L_list.append(L(X_train, y_train, w_new, b_new))\n",
     "\n",
@@ -300,21 +347,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   },
   "toc": {
    "colors": {
